cmake_minimum_required(VERSION 3.31)
project(vulkan_playground)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(01_hello_glfw)
add_subdirectory(02_hello_vulkan)
add_subdirectory(03_phisical_device)
add_subdirectory(04_logical_device)
add_subdirectory(05_window_surface)
add_subdirectory(06_swapchain)
add_subdirectory(07_image_view)
add_subdirectory(08_pipeline)
add_subdirectory(09_drawing)
add_subdirectory(10_resize)
add_subdirectory(11_refactor)
add_subdirectory(12_vertex_buffer)
add_subdirectory(13_index_buffer)
add_subdirectory(14_uniform_buffer)
add_subdirectory(15_refactor2)